--- a/model.ipynb
+++ b/model.ipynb
@@ -289,6 +289,64 @@
     "test_loss,test_acc = model.evaluate(test_set)\n",
     "print('Test Accuracy:', test_acc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_9\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_17 (Conv2D)          (None, 21, 21, 32)        896       \n",
+      "                                                                 \n",
+      " activation_27 (Activation)  (None, 21, 21, 32)        0         \n",
+      "                                                                 \n",
+      " max_pooling2d_17 (MaxPoolin  (None, 10, 10, 32)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_18 (Conv2D)          (None, 3, 3, 64)          18496     \n",
+      "                                                                 \n",
+      " activation_28 (Activation)  (None, 3, 3, 64)          0         \n",
+      "                                                                 \n",
+      " max_pooling2d_18 (MaxPoolin  (None, 1, 1, 64)         0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten_5 (Flatten)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_10 (Dense)            (None, 64)                4160      \n",
+      "                                                                 \n",
+      " activation_29 (Activation)  (None, 64)                0         \n",
+      "                                                                 \n",
+      " dropout_5 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_11 (Dense)            (None, 1)                 65        \n",
+      "                                                                 \n",
+      " activation_30 (Activation)  (None, 1)                 0         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 23,617\n",
+      "Trainable params: 23,617\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
